use ProcessBuilder to start ProB2 Standalone